--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,23 @@
-<h1>Hello World!!!</h1>
+<h1>Book list</h1>
+
+<table class="table">
+  <% @books.each do |b| %>
+
+  <tr>
+    <td>
+      <%= b.name %>
+    </td>
+    <td>
+      <%= link_to "Show" , book_path(b), :class => "btn btn-primary" %>
+
+      <%= link_to "Edit" , edit_book_path(b), :class => "btn btn-default" %>
+
+      <%= link_to "Delete" , book_path(b) , :method => :delete, :class => "btn btn-danger" , :data => { :confirm => "Are you sure?"} %>
+    </td>
+  </tr>
+  <% end %>
+</table>
+
+<%= link_to 'New Book', new_book_path %>
+
+<%= paginate @books %>
