--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Book list</h1>
 <%= link_to 'New Book', new_book_path, :class => "btn btn-primary" %>
-<table class="table">
 
+<table class="table">
   <tr>
     <td>
       <h3>書名</h3>
@@ -28,7 +28,7 @@
       <%= link_to "Edit" , edit_book_path(b), :class => "btn btn-warning" %>
     </td>
     <td>
-      <%= link_to "Delete" , book_path(b) , :method => :delete, :class => "btn btn-danger" , :data => { :confirm => "Are you sure?"} %>
+      <%= link_to "Delete" , book_path(b,:page=>params[:page]) , :method => :delete, :class => "btn btn-danger" , :data => { :confirm => "Are you sure?"} %>
     </td>
   </tr>
   <% end %>
