--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,7 +30,7 @@
       <%= link_to "Show" , book_path(b), :class => "btn btn-info" %>
     </td>
     <td>
-      <%= link_to "Edit" , books_path(:edit_id => b), :class => "btn btn-warning" %>
+      <%= link_to "Edit" , books_path(:id => b), :class => "btn btn-warning" %>
     </td>
     <td>
       <%= link_to "Delete" , book_path(b,:page=>params[:page]) , :method => :delete, :class => "btn btn-danger" , :data => { :confirm => "Are you sure?"} %>
